[gd_scene load_steps=7 format=2]

[ext_resource path="res://core/map/exit_menu.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/menu/dialog/independent_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/map/save_menu.gd" type="Script" id=3]
[ext_resource path="res://core/shortcut/ui_cancel.tres" type="ShortCut" id=4]
[ext_resource path="res://core/shortcut/ui_accept.tres" type="ShortCut" id=5]
[ext_resource path="res://core/map/gui.gd" type="Script" id=6]

[node name="GUI" type="ColorRect"]
anchor_left = 0.000695229
anchor_right = 1.0007
anchor_bottom = 1.0
margin_left = 4.24268
margin_right = 4.24268
color = Color( 0, 0, 0, 0.2 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitMenu" parent="." instance=ExtResource( 1 )]
title = "Title"

[node name="SaveMenu" parent="." instance=ExtResource( 2 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
script = ExtResource( 3 )
title = "Save"
save_directory = "user://game_saves"

[node name="Box" type="VBoxContainer" parent="SaveMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="LineEdit" parent="SaveMenu/Box"]
margin_right = 520.0
margin_bottom = 42.0
placeholder_text = "Name"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="ScrollContainer" parent="SaveMenu/Box"]
margin_top = 52.0
margin_right = 520.0
margin_bottom = 418.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="PanelContainer" parent="SaveMenu/Box/Box"]
margin_right = 520.0
margin_bottom = 366.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Box" type="VBoxContainer" parent="SaveMenu/Box/Box/Box"]
margin_left = 16.0
margin_top = 11.0
margin_right = 504.0
margin_bottom = 355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cancel" type="Button" parent="SaveMenu/Box"]
margin_top = 428.0
margin_right = 520.0
margin_bottom = 469.629
shortcut = ExtResource( 4 )
text = "Cancel"

[node name="Save" type="Button" parent="SaveMenu/Box"]
margin_top = 479.0
margin_right = 520.0
margin_bottom = 520.629
shortcut = ExtResource( 5 )
text = "Save"
[connection signal="cancel" from="ExitMenu" to="." method="_on_ExitMenu_cancel"]
[connection signal="exit" from="ExitMenu" to="." method="_on_ExitMenu_exit"]
[connection signal="restart" from="ExitMenu" to="." method="_on_ExitMenu_restart"]
[connection signal="save" from="ExitMenu" to="." method="_on_ExitMenu_save"]
[connection signal="settings" from="ExitMenu" to="." method="_on_ExitMenu_settings"]
[connection signal="cancel" from="SaveMenu" to="." method="_on_SaveMenu_cancel"]
[connection signal="save" from="SaveMenu" to="." method="_on_SaveMenu_save"]
[connection signal="text_changed" from="SaveMenu/Box/Name" to="SaveMenu" method="_on_Name_text_changed"]
[connection signal="pressed" from="SaveMenu/Box/Cancel" to="SaveMenu" method="_on_Cancel_pressed"]
[connection signal="pressed" from="SaveMenu/Box/Save" to="SaveMenu" method="_on_Save_pressed"]
